# dragnet

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  compose.dev.yml  docker-compose.yml  entrypoint.sh  manage.py  pyproject.toml
.github/workflows/: ci.yml
core/: admin.py  api.py  bitmagnet.py  models.py  putio.py  services.py  urls.py  views.py
core/migrations/: 0001_initial.py  0002_downloadrequest_destination.py
core/templates/core/: base.html  history.html  search.html  status.html
core/templates/registration/: login.html
core/tests/: test_api.py  test_bitmagnet.py  test_putio.py  test_views.py
dragnet/: asgi.py  settings.py  urls.py  wsgi.py
