[project]
name = "dragnet"
version = "0.1.0"
description = "Family torrent search over a self-hosted DHT index, with one-click send to put.io"
requires-python = ">=3.12"
dependencies = [
    "django>=6.0.6",
    "environs>=15.0.1",
    "gunicorn>=26.0.0",
    "requests>=2.34.2",
    "whitenoise>=6.12.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-django>=4.12.0",
    "responses>=0.26.1",
    "ruff>=0.15.17",
]

[tool.ruff]
target-version = "py312"
line-length = 100
extend-exclude = ["core/migrations"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "dragnet.settings"
python_files = ["test_*.py"]
